--- a/conf.env
+++ b/conf.env
@@ -15,4 +15,12 @@ mailer_header="FNGC"
 mailer_smtp="mail.barafiri.com"
 mailer_password="MadamBarafiri@NG1"
 
+student_type="student"
+tutor_type="tutor"
+
+unverified_status="unverified"
+verified_status="verified"
+
+admin_email="apinaendy@gmail.com"
+
 mail_subject_prefix = "FNGC - "
