some errors with pointers

--- a/conf.env
+++ b/conf.env
@@ -1,4 +1,5 @@
 app_name="fngc"
+app_mode="dev"
 port=":6112"
 db_user="firi"
 db_pass="firiraba_107"
@@ -10,10 +11,10 @@ jwt_secret="enterpas"
 template_path="./files/templates/"
 mail_subject="FNGC"
 
-mailer_email="info@barafiri.com"
+mailer_email='info.barafiri@gmail.com'
 mailer_header="FNGC"
-mailer_smtp="mail.barafiri.com"
-mailer_password="MadamBarafiri@NG1"
+mailer_smtp="smtp.gmail.com"
+mailer_password='Perf$mance'
 
 student_type="student"
 tutor_type="tutor"
